# Build tools specified
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Metadata for my project
[project]
name = "amuni_pysample"
version = "0.0.1"
authors = [
  { name="Amisha Muni" },
]
description = "My sample python repo for a medium sized project"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# Check if i need to put it all here, or use the requirements.txt dynamically
#as per https://stackoverflow.com/questions/76771724/optional-dependencies-using-test-requirements-txt-in-pyproject-toml-with-#setupto
# Check if test requirement like pytest should be in a separate file
# https://packaging.python.org/en/latest/guides/tool-recommendations/
# Also i note a pip freeze shows a ton of packages installed, probably due to streamlit
dependencies = [
  "streamlit",
  "build",
  "pytest"
]

[project.urls]
"Homepage" = "https://github.com/amishamuni/amuni_pysample"
#"Bug Tracker" = "https://github.com/amishamuni/amuni_pysample/issues"