# Build tools specified
[build-system]
requires = ["setuptools>=65.5.0"]
build-backend = "setuptools.build_meta"

# Metadata for my project
[project]
name = "amuni_pysample"

# I need to know versioning standards from PEP440
version = "0.1.0"
authors = [
  { name="Amisha Muni" },
]
description = "My sample python repo for a medium sized project"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]

# Data i dont want to specify statically
dynamic = ["dependencies", "optional-dependencies"]

# Specify my dependencies via separate files
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
#optional-dependencies.test = { file = ["test-requirements.txt"] }

[project.urls]
"Homepage" = "https://github.com/amishamuni/amuni_pysample"
